objects/SI_Record_Types__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Secure Information Record types</description>
    <fields>
        <fullName>HCSC_Division__c</fullName>
        <description>HCSC Division used for state.</description>
        <label>HCSC Division</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SI_Record_Type_API_Name__c</fullName>
        <description>Secure Information Record Type Name, used in to create a secure Information object record from request Hub.</description>
        <label>SI Record Type API Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SI_Request_Hub_UI_Label__c</fullName>
        <description>Secure Information record type API name.</description>
        <label>SI Request Hub UI Label</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>SI Record Types</label>
    <listViews>
        <fullName>View_All</fullName>
        <columns>NAME</columns>
        <columns>HCSC_Division__c</columns>
        <columns>SI_Record_Type_API_Name__c</columns>
        <columns>SI_Request_Hub_UI_Label__c</columns>
        <filterScope>Everything</filterScope>
        <label>View All</label>
    </listViews>
</CustomObject>